--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <script src="script.js"></script>
     <title>Rock Paper Scissors</title>
 </head>
+
 <body>
-    
+    <div class="content">
+        <button value="rock">Rock</button>
+        <button value="paper">Paper</button>
+        <button value="scissors">Scissors</button>
+    </div>
 </body>
 </html>
