Game round result can now be displayed on screen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button value="rock">Rock</button>
         <button value="paper">Paper</button>
         <button value="scissors">Scissors</button>
+
+        <div class="results"></div>
     </div>
 </body>
 </html>
