Game plays for 5 rounds with working reset button. Just need to display win/loss message before pressing buttons the 6th time.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div class="content">
-        <button value="rock">Rock</button>
-        <button value="paper">Paper</button>
-        <button value="scissors">Scissors</button>
+        <button class="rpsButton" value="rock">Rock</button>
+        <button class="rpsButton" value="paper">Paper</button>
+        <button class="rpsButton" value="scissors">Scissors</button>
+        <button class="resetButton">Reset Game</button>
 
         <div class="results"></div>
     </div>
