Added images for the buttons Added minor CSS to make the webpage look more presentable When a button is clicked, computer's choice is now shown in text below.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 
 <body>
     <div class="content">
-        <button class="rpsButton" value="rock">Rock</button>
-        <button class="rpsButton" value="paper">Paper</button>
-        <button class="rpsButton" value="scissors">Scissors</button>
-        <button class="resetButton">Reset Game</button>
+        <h1>Very Cool Rock, Paper, Scissors Game</h1>
+        <div class="container">
+            <button class="rpsButton" value="rock"><img src="images/rockImage.png" alt="A rock"></button>
+            <button class="rpsButton" value="paper"><img src="images/paperImage.png" alt="A piece of paper"></button>
+            <button class="rpsButton" value="scissors"><img src="images/scissorsImage.png" alt="A pair of scissors"></button>
+            <button class="resetButton" class="resetStyle">Reset Game</button>
 
-        <div class="results"></div>
+            <div class="results"></div>
+        </div>
     </div>
 </body>
 </html>
